# oclus

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/00000000000000_create_users_table/: up.sql
migrations/00000000000000_initial/: down.sql  up.sql
migrations/00000000000001_create_groups_table/: up.sql
migrations/0_initial/: up.sql
server/: Cargo.toml
server/migration/: 0001_initial.sql
server/migrations/00000000000000_create_users_table/: up.sql
server/migrations/00000000000001_create_groups_table/: up.sql
server/src/: lib.rs  main.rs
server/src/app/: mod.rs
server/src/app/service/: mod.rs
server/src/app/service/auth/: mod.rs  register.rs
server/src/app/service/user/: mod.rs
server/src/db/: mod.rs  schema.rs
server/src/db/model/: group.rs  mod.rs  user.rs
server/src/dto/: auth.rs  error.rs  group.rs  mod.rs  user.rs
server/src/middleware/: validation.rs
server/src/middleware/auth/: mod.rs  strong.rs
server/src/model/: user.rs
server/src/route/: auth.rs  group.rs  mod.rs  user.rs
server/src/util/: crypto.rs  db.rs  jwt.rs  mod.rs
server/tests/: auth.rs
server/tests/util/: mod.rs
src/: lib.rs  main.rs
src/db/: mod.rs  schema.rs
src/db/model/: group.rs  user.rs
src/dto/: auth.rs  error.rs  mod.rs  user.rs
src/middleware/: auth.rs  mod.rs  validation.rs
src/middleware/auth/: mod.rs  strong.rs
src/model/: group.rs  mod.rs  user.rs
src/route/: auth.rs  mod.rs  user.rs
src/route/group/: mod.rs
src/util/: crypto.rs  db.rs  jwt.rs  mod.rs  sync.rs
