[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0" }
dotenv = { version = "0.15" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["chrono", "uuid", "postgres", "r2d2"] }
diesel_migrations = "2.2"
actix-web = { version = "4.9" }
tokio = { version = "1.40", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }
regex = { version = "1.11.0" }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9.3" }
bcrypt = { version = "0.15" }
derive_builder = { version = "0.20" }

[dev-dependencies]
actix-http = {version = "3.9.0"}

