[workspace]
resolver = "2"
members = ["server"]

[workspace.dependencies]
thiserror = { version = "1.0" }
dotenv = { version = "0.15" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
