[workspace]
resolver = "2"
members = ["server"]

[workspace.dependencies]
thiserror = { version = "1.0" }
dotenv = { version = "0.15" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.40" }
chrono = { version = "0.4" }
