[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.2", features = ["chrono", "uuid", "postgres", "r2d2"] }
diesel_migrations = "2.2"
actix-web = { version = "4.9" }
validator = { version = "0.18", features = ["derive"] }
regex = { version = "1.11.0" }
jsonwebtoken = { version = "9.3" }
bcrypt = { version = "0.15" }

[dev-dependencies]
actix-http = {version = "3.9.0"}

