[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { workspace = true, features = ["sync"] }

log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

bcrypt = { version = "0.15" }
totp-rs = { version = "5.6" }
jsonwebtoken = { version = "9.3" }
